# feature_analysis

./: .dockerignore  .gitattributes  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.dev/: run_lint.sh
.devcontainer/: devcontainer.json  docker-compose.yml
docs/: README.md
feature_analysis/analyser/: __init__.py  _feature_extractor.py  captum.py  tsne.py  umap.py
feature_analysis/app/: __init__.py  trainer.py
feature_analysis/data/: _data.py
feature_analysis/models/: _model.py
feature_analysis/utils/: __init__.py  viz.py
tests/: conftest.py
tests/app/: test_feature_analysis_app.py  test_integration_app.py
